Add /mv command; Fixes #749

--- a/src/main/resources/me/minotopia/expvp/spawn.properties
+++ b/src/main/resources/me/minotopia/expvp/spawn.properties
@@ -5,6 +5,13 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-# Note that actual spawn names are configured by the administrator in this bundle's override file.
 bossbar-format=§6Current map: §e{0} §6- next in §e{1} minutes
 vote.chat-reminder=A new map will be selected in {0}. Remember to /cast your vote until then!
+vote.header=You may vote for these maps:
+vote.no-spawns=Sorry, there are no maps yet.
+vote.spawn-button=[Vote for this map]
+vote.spawn-item={0} §e({1})
+vote.vote.one=vote
+vote.voted=Your vote for {0} was recorded.
+vote.vote.many=votes
+vote.see-at-spawn=You can find previews of these maps at spawn.
