Add linking mechanism for map vote buttons; Fixes #801
Note that the buttons don't have any effect for now

--- a/src/main/resources/me/minotopia/expvp/admin.properties
+++ b/src/main/resources/me/minotopia/expvp/admin.properties
@@ -56,3 +56,5 @@ ui.skilledit.add-subskill-success=Successfully added child skill.
 ui.skilledit.unable-to-save=Unable to save tree.
 skill.info.lang-files=You can configure names in the lang/skill.properties and lang/skill_de.properties files in the plugin folder.
 tree.info.lang-files=You can configure names in the lang/tree.properties and lang/tree_de.properties files in the plugin folder.
+spawn.link.session-start=Hit the button you want to link now.
+spawn.unlink.session-start=Now hit the button you want to unlink.
