Add vote button listener; Fixes #802

--- a/src/main/resources/me/minotopia/expvp/admin.properties
+++ b/src/main/resources/me/minotopia/expvp/admin.properties
@@ -58,3 +58,4 @@ skill.info.lang-files=You can configure names in the lang/skill.properties and l
 tree.info.lang-files=You can configure names in the lang/tree.properties and lang/tree_de.properties files in the plugin folder.
 spawn.link.session-start=Hit the button you want to link now.
 spawn.unlink.session-start=Now hit the button you want to unlink.
+spawn.link.done=Linking successful.
