Fix vote button response format

--- a/src/main/resources/me/minotopia/expvp/spawn.properties
+++ b/src/main/resources/me/minotopia/expvp/spawn.properties
@@ -12,6 +12,6 @@ vote.no-spawns=Sorry, there are no maps yet.
 vote.spawn-button=[Vote for this map]
 vote.spawn-item={0} §e({1})
 vote.vote.one=vote
-vote.voted=Your vote for {0} was recorded.
+vote.voted=§aYour vote for {0} §awas recorded.
 vote.vote.many=votes
 vote.see-at-spawn=You can find previews of these maps at spawn.
