Add basic implementation of a main menu; Fixes #793

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -38,4 +38,26 @@ tree-select.title=§e§lSkill trees
 minute.one=minute
 minute.many=minutes
 plural-none=no
+inv.main.title=§e§lExpvp Main Menu
+inv.main.armor-link=§eComing Soon
+inv.main.armor-reset-link=§eComing Soon
+inv.main.no-friend=§7You don't have a friend.\n\
+§7Add one via §e/stats§7.
+inv.main.league-item=§eLeague:
+inv.main.exp-format=§eExp: §7
+inv.main.exp-link=§7Click for stats
+inv.main.next-league=§eNext league: {0}
+inv.main.next-in=§7You still need {0} Exp.
+inv.main.next-bedrock=§7You need to be one of the\n\
+§7top five players on the\n\
+§7server to get to the\n\
+§7{0} league.
+inv.main.next-none=§7You've reached the highest\n\
+§7possible league.\n\
+§eCongratulations!
+inv.main.death-exp-title=§eExp loss on death
+inv.main.death-exp-lore=§7Every time you die,\n\
+§7you lose §e{0}§7 Exp\n\
+§7in your current league.
+inv.main.stats-top-link=§eLeaderboards
 
