Enchant tree icon item if TP > 0; Fixes #809

--- a/src/main/resources/me/minotopia/expvp/core.properties
+++ b/src/main/resources/me/minotopia/expvp/core.properties
@@ -60,4 +60,6 @@ inv.main.death-exp-lore=§7Every time you die,\n\
 §7you lose §e{0}§7 Exp\n\
 §7in your current league.
 inv.main.stats-top-link=§eLeaderboards
+inv.tree.no-tp=§cYou don't have any Talent Points.
+inv.tree.tp-count=§aYou have {0}.
 
