Translate remaining (user-facing!) command output; Fixes #757

--- a/src/main/resources/me/minotopia/expvp/cmd.properties
+++ b/src/main/resources/me/minotopia/expvp/cmd.properties
@@ -5,6 +5,9 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
+menu.info.desc=Shows version info
+menu.root.desc=Shows the main menu
+skills.root.desc=Shows skill trees
 splink.link.desc=Links a map vote button
 splink.link.help=Links a button to a\n\
 map for voting.
