--- a/src/main/resources/me/minotopia/expvp/admin.properties
+++ b/src/main/resources/me/minotopia/expvp/admin.properties
@@ -59,3 +59,4 @@ tree.info.lang-files=You can configure names in the lang/tree.properties and lan
 spawn.link.session-start=Hit the button you want to link now.
 spawn.unlink.session-start=Now hit the button you want to unlink.
 spawn.link.done=Linking successful.
+ignore.inv=Your magical admin powers allowed you to open this inventory.
